@@ -1,3 +1,9 @@
+Feb 8, 2007
+
+  * ADDED: Map existence_error(http_location, URL) and 
+    permission_error(http_location, access, URL) to appropriate HTTP
+    headers.
+
 Feb 2, 2007
 
   * ADDED: Report status of stopped worker.
